--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "daisyui": "^5.0.43",
+    "firebase": "^11.8.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.511.0",
     "match-sorter": "^8.0.2",
