--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.80.7",
+    "axios": "^1.10.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.8.1",
     "localforage": "^1.10.0",
